--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
     <version>4.3.3.RELEASE</version>
   </dependency>
   <dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>8.0.28</version>
+  </dependency>
+  <dependency>
     <groupId>javax.servlet</groupId>
     <artifactId>jstl</artifactId>
     <version>1.2</version>
